dataset1235/2025-2/805158916/users/2004009724/executions/2651470117_3455942218.log
== RUN (2025-08-25 14:23:51)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_tota = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:24:36)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_total = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:31)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_tota = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:53)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_tota = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:23:38)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_tota = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 14:23:37)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_tota = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    valor_restante = valor_disponivel - preco_total
                                        ^^^^^^^^^^^
NameError: name 'preco_total' is not defined. Did you mean: 'preco_tota'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 14:24:37)
-- CODE: 
valor_unitario = float(input())
valor_disponivel = float(input())
preco_total = (8 * valor_unitario) + 45.00
valor_restante = valor_disponivel - preco_total
print(round(preco_total, 1))
print(round(valor_restante, 1))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
100.0
900.0
---- correct output:
845.0
55.0
---- user output:
55.0
-- TEST CASE 2:
---- input:
33.0
310.0
---- correct output:
309.0
1.0
---- user output:
1.0
-- TEST CASE 3:
---- input:
356.0
4200.00
---- correct output:
2893.0
1307.0
---- user output:
1307.0
-- TEST CASE 4:
---- input:
123987.0
1000000.0
---- correct output:
991941.0
8059.0
---- user output:
8059.0
-- TEST CASE 5:
---- input:
1.2
70.00
---- correct output:
54.6
15.4
---- user output:
15.4
-- TEST CASE 6:
---- input:
20.0
400.0
---- correct output:
205.0
195.0
---- user output:
195.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
